Fixato overflow aside

--- a/css/style.css
+++ b/css/style.css
@@ -68,8 +68,7 @@ aside > * {
 }
 
 aside li {
-    margin: 5px 0;
-    padding-bottom: 10px;
+    margin: 10px 0;
 }
 
 aside > .navigation {
@@ -99,6 +98,7 @@ aside #playlist-container {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 
 aside #playlist-container ul {
@@ -106,9 +106,14 @@ aside #playlist-container ul {
     flex-grow: 1;
 }
 
+aside #playlist-container ul li {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
 
-aside #playlist-container li {
-    padding-bottom: 10px;
+aside #playlist-container ul li a {
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 aside #playlist-container h4 {
@@ -223,7 +228,8 @@ main {
     /*          GENRE          */
 
     .genre {
-        height: 30px;
+        height: 50px;
+        padding: 10px;
         background-color: #141922;
         display: flex;
         justify-content: center;
@@ -232,11 +238,13 @@ main {
     
     .genre > ul {
         display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
     }
     
     .genre > ul > li > a {
-        margin: 0 5px;
-        padding: 3px 8px;
+        margin: 5px 5px;
+        padding: 5px 8px;
         font-size: small;
         font-weight: 100;
         color: rgb(135, 135, 135);
@@ -409,7 +417,6 @@ footer .container {
     }
 
     .container-trackbar {
-        height: 15px;
         width: 100%;
         display: flex;
         align-items: center;
